--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<a class="header__nav-link" href="#">Menu</a>
 						</li>
 					</ul>
-					<ul class="header__nav-list">
+											<ul class="header__nav-list">
 						<li class="header__nav-item">
 							<a class="header__nav-link" href="#">Reservation</a>
 						</li>
@@ -104,7 +104,51 @@ Morning Coffee.</h6>
 
 
 		<main class="main">
-			<div class="container"></div>
+			<div class="container">
+				<section class="process">
+					<div class="process__card-1 card">
+						<div class="text">
+						<span class="process__number">01</span>
+						<h3 class="process__title">Best Coffee Flavour</h3>
+						</div>
+						<img class="process__img" src="./img/process-img_1.jpg" alt="Best Coffee Flavour">
+					</div>
+					<div class="process__card-2 card">
+						<div class="text">
+						<span class="process__number">02</span>
+						<h3 class="process__title">Best Coffee Flavour</h3>
+						</div>
+						<img class="process__img" src="./img/process-img_2.jpg" alt="Best Coffee Flavour">
+					</div>
+					<div class="process__card-3 card">
+						<div class="text">
+						<span class="process__number">03</span>
+						<h3 class="process__title">Best Coffee Flavour</h3>
+						</div>
+						<img class="process__img" src="./img/process-img_3.jpg" alt="Best Coffee Flavour">
+					</div>
+				</section>
+				<!-- process -->
+
+				<section class="history">
+					<div class="history__block-1">
+						<img class="history__img-1" src="./img/history-img_1.jpg" alt="history-img">
+						<img class="history__img-2" src="./img/history-img_2.jpg" alt="history-img">
+					</div>
+					<div class="history__block-2">
+						<img class="history__img-3" src="./img/history-img_3.jpg" alt="history__img">
+					</div>
+					<div class="history__block-3">
+						<span class="subtitle">Our history</span>
+						<h4 class="history__title">Create a
+new story with us</h4>
+							<p class="history__text">mauris rhoncus in imperdiet placerat. vestibu emismd nisl suscirpit ligula volutpat, a feyguat urn maxmaus. cars massa nibhtincidunt. donec et nibh maximus, est eu, mattis nuce. preasent ut quam quis quam venen
+atis fringilla. morbi vastibulum id tells mmodo mattis. aliauam erat volutpal.</p>
+					</div>
+				</section>
+				<!-- history -->
+				
+			</div>
 		</main>
 
 
