--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					</ul>
 					<ul class="header__nav-list">
 						<li class="header__nav-item">
-							<a class="header__nav-link" href="#">Menu</a>
+							<a class="header__nav-link" href="#menu">Menu</a>
 						</li>
 
 
@@ -54,9 +54,9 @@
 						</li>
 					</ul>
 
-					<div class="header__logo">
+					<a class="header__logo" href="#">
 						<img class="logo" src="./img/logo.png" alt="Coffee shop">
-					</div>
+					</a>
 
 					<ul class="header__nav-list">
 						<li class="header__nav-item">
@@ -392,7 +392,7 @@
 			</section>
 
 			<!-- menu -->
-			<section class="menu">
+			<section id="menu" class="menu">
 				<div class="container">
 					<div class="menu__text text">
 						<!-- <div class="menu__descr descr">Menu</div> -->
@@ -672,7 +672,9 @@
 		<div class="container">
 			<div class="footer__top">
 				<div class="footer__logo">
-					<img class="logo" src="img/logo.png" alt="Coffee Shop">
+					<a href="#">
+						<img class="logo" src="img/logo.png" alt="Coffee Shop">
+					</a>
 				</div>
 				<div class="footer__nav">
 					<ul class="footer__nav-list">
